RESOLVED FIXED314807
REGRESSION(313207@main): Broke WebCore module verification (double-quoted include CommandLineAPIHost.h and InstrumentingAgents.h)
https://bugs.webkit.org/show_bug.cgi?id=314807
Summary REGRESSION(313207@main): Broke WebCore module verification (double-quoted inc...
Abrar Rahman Protyasha
Reported 2026-05-14 03:03:04 PDT
i.e. some build configurations broke. ``` /Release-iphonesimulator/WebCore.framework/PrivateHeaders/CommandLineAPIHost.h:32:10: error: double-quoted include "InstrumentingAgents.h" in framework header, expected angle-bracketed instead [-Werror,-Wquoted-include-in-framework-header] Release-iphonesimulator/WebCore.framework/PrivateHeaders/WebInjectedScriptManager.h:28:10: error: double-quoted include "CommandLineAPIHost.h" in framework header, expected angle-bracketed instead [-Werror,-Wquoted-include-in-framework-header] ```
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-14 03:03:10 PDT
Abrar Rahman Protyasha
Comment 2 2026-05-14 03:06:53 PDT
EWS
Comment 3 2026-05-14 03:24:59 PDT
Committed 313233@main (c21ff09bed7d): <https://commits.webkit.org/313233@main> Reviewed commits have been landed. Closing PR #64922 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.