REGRESSION(313207@main): Broke WebCore module verification (double-quoted include CommandLineAPIHost.h and InstrumentingAgents.h) https://bugs.webkit.org/show_bug.cgi?id=314807 rdar://177055939

Unreviewed build fix.

We simply change these private header includes to angle brackets, thus
addressing the following build errors:

```
/Release-iphonesimulator/WebCore.framework/PrivateHeaders/CommandLineAPIHost.h:32:10: error: double-quoted include "InstrumentingAgents.h" in framework header, expected angle-bracketed instead [-Werror,-Wquoted-include-in-framework-header]

Release-iphonesimulator/WebCore.framework/PrivateHeaders/WebInjectedScriptManager.h:28:10: error: double-quoted include "CommandLineAPIHost.h" in framework header, expected angle-bracketed instead [-Werror,-Wquoted-include-in-framework-header]
```

* Source/WebCore/inspector/CommandLineAPIHost.h:
* Source/WebCore/inspector/WebInjectedScriptManager.h:

Canonical link: https://commits.webkit.org/313233@main